--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Abraham Iqbal  # the main title
+title:| Abraham Iqbal |  # the main title
 
 tagline: Infrastructure and Project Implementation Specialist # it will display as the subtitle
 
@@ -150,8 +150,8 @@ pwa:
 
 paginate: 10
 
-# The base URL of your site
-baseurl: ""
+url: "https://abeiq.github.io" #
+baseurl:
 
 # ------------ The following options are not recommended to be modified ------------------
 
